@@ -130,7 +130,7 @@ public class BbModelImporter implements ModelImporter<BbModel> {
     protected List<Node> nodePath(Node child) {
         List<Node> nodePath = new ObjectArrayList<>();
         while (child != null) {
-            nodePath.add(0, child);
+            nodePath.addFirst(child);
             child = child.parent();
         }
         return nodePath;
@@ -180,11 +180,11 @@ public class BbModelImporter implements ModelImporter<BbModel> {
             BbAnimator animator = anim.animators.get(effectsUUID);
             for (BbKeyframe kf : animator.keyframes) {
                 float difference = Mth.ceil(kf.time / 0.05f) * 0.05f; // snap value to 50ms increments
-                if (difference == t && kf.channel == BbKeyframe.Channel.timeline) {
+                if (difference == t && kf.channel == BbKeyframe.Channel.TIMELINE) {
                     String key = "script";
-                    String script = kf.dataPoints.get(0).get(key).getStringValue();
+                    String script = kf.dataPoints.getFirst().get(key).getStringValue();
                     if (!script.isEmpty()) {
-                        var cmds = CommandParser.parse(kf.dataPoints.get(0).get(key).getStringValue());
+                        var cmds = CommandParser.parse(kf.dataPoints.getFirst().get(key).getStringValue());
                         return new Frame.Commands(cmds, null);
                     }
                 }
@@ -200,8 +200,8 @@ public class BbModelImporter implements ModelImporter<BbModel> {
             BbAnimator animator = anim.animators.get(effectsUUID);
             for (BbKeyframe kf : animator.keyframes) {
                 float difference = Mth.ceil(kf.time / 0.05f) * 0.05f; // snap value to 50ms increments
-                if (difference == t && kf.channel == BbKeyframe.Channel.sound) {
-                    return BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse(kf.dataPoints.get(0).get("effect").getStringValue())).orElseThrow().value();
+                if (difference == t && kf.channel == BbKeyframe.Channel.SOUND) {
+                    return BuiltInRegistries.SOUND_EVENT.get(ResourceLocation.parse(kf.dataPoints.getFirst().get("effect").getStringValue())).orElseThrow().value();
                 }
             }
         }
